# src/Controllers/v1/ProductsController.cs
@@ -8,9 +8,10 @@ using System;
 using System.Collections.Generic;
 using System.Threading.Tasks;
 
-namespace FeaturesEnabled.ClaimBased.AutoSwagger.Api.Controllers
+namespace FeaturesEnabled.ClaimBased.AutoSwagger.Api.Controllers.v1
 {
-    [Route("api/[controller]")]
+    [ApiVersion("1.0")]
+    [Route("api/v{version:apiVersion}/[controller]")]
     [ApiController]
     public class ProductsController : ControllerBase
     {
