# src/Controllers/v1/UsersController.cs
@@ -7,9 +7,10 @@ using System;
 using System.Collections.Generic;
 using System.Threading.Tasks;
 
-namespace FeaturesEnabled.ClaimBased.AutoSwagger.Api.Controllers
+namespace FeaturesEnabled.ClaimBased.AutoSwagger.Api.Controllers.v1
 {
-    [Route("api/[controller]")]
+    [ApiVersion("1.0")]
+    [Route("api/v{version:apiVersion}/[controller]")]
     [ApiController]
     public class UsersController : ControllerBase
     {
